[project]
name = "danbooru-tag-groups-scraper"
version = "0.1.0"
description = "Scrape Danbooru tag groups into hierarchical and flat exports"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
urls = { Homepage = "https://github.com/PBandDev/danbooru-tag-groups-scraper", Repository = "https://github.com/PBandDev/danbooru-tag-groups-scraper", Issues = "https://github.com/PBandDev/danbooru-tag-groups-scraper/issues" }
dependencies = [
  "beautifulsoup4>=4.13.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
danbooru-tag-groups = "danbooru_tag_groups.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/danbooru_tag_groups"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: exercises the real Danbooru site",
]
